versions/v2.8/modules/en/pages/observability/istio/guides/guides.adoc
= Istio Setup Guides
:revdate: 2024-09-26
:page-revdate: {revdate}

This section describes how to enable Istio and start using it in your projects.

If you use Istio for traffic management, you will need to allow external traffic to the cluster. In that case, you will need to follow all of the steps below.

== Prerequisites

This guide assumes you have already xref:installation-and-upgrade/installation-and-upgrade.adoc[installed Rancher,] and you have already xref:cluster-deployment/cluster-deployment.adoc[provisioned a separate Kubernetes cluster] on which you will install Istio.

The nodes in your cluster must meet the xref:observability/istio/cpu-and-memory-allocations.adoc[CPU and memory requirements.]

The workloads and services that you want to be controlled by Istio must meet https://istio.io/docs/setup/additional-setup/requirements/[Istio's requirements.]

== Install

[TIP]
.Quick Setup Tip:
====

If you don't need external traffic to reach Istio, and you just want to set up Istio for monitoring and tracing traffic within the cluster, skip the steps for xref:observability/istio/guides/set-up-istio-gateway.adoc[setting up the Istio gateway] and xref:observability/istio/guides/set-up-traffic-management.adoc[setting up Istio's components for traffic management.]
====


. xref:observability/istio/guides/enable-istio-in-cluster.adoc[Enable Istio in the cluster.]
. xref:observability/istio/guides/enable-istio-in-namespace.adoc[Enable Istio in all the namespaces where you want to use it.]
. xref:observability/istio/guides/use-istio-sidecar.adoc[Add deployments and services that have the Istio sidecar injected.]
. xref:observability/istio/guides/set-up-istio-gateway.adoc[Set up the Istio gateway.]
. xref:observability/istio/guides/set-up-traffic-management.adoc[Set up Istio's components for traffic management.]
. xref:observability/istio/guides/generate-and-view-traffic.adoc[Generate traffic and see Istio in action.]
