versions/v2.9/modules/en/pages/observability/istio/guides/guides.adoc
= Istio Setup Guides
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/istio-setup-guide/index.adoc 
:product-path: observability/istio/guides/guides.adoc
ifeval::["{build-type}" != "community"]
:xref-cluster-deployment: xref:cluster-deployment/cluster-deployment.adoc
:xref-install-upgrade: xref:installation-and-upgrade/installation-and-upgrade.adoc
:xref-istio-traffic-management-setup: xref:observability/istio/guides/set-up-traffic-management.adoc
:xref-istio-gateway-setup: xref:observability/istio/guides/set-up-istio-gateway.adoc
:xref-istio-cpu-memory-allocations: xref:observability/istio/cpu-and-memory-allocations.adoc
:xref-istio-sidecar: xref:observability/istio/guides/use-istio-sidecar.adoc
:xref-istio-generate-and-view-traffic: xref:observability/istio/guides/generate-and-view-traffic.adoc
:xref-enable-istio-in-namespace: xref:observability/istio/guides/enable-istio-in-namespace.adoc
:xref-enable-istio-in-cluster: xref:observability/istio/guides/enable-istio-in-cluster.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-cluster-deployment: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/index.adoc
:xref-install-upgrade: xref:getting-started/installation-and-upgrade/index.adoc
:xref-istio-traffic-management-setup: xref:how-to-guides/advanced-user-guides/istio-setup-guide/set-up-traffic-management.adoc
:xref-istio-gateway-setup: xref:how-to-guides/advanced-user-guides/istio-setup-guide/set-up-istio-gateway.adoc
:xref-istio-cpu-memory-allocations: xref:integrations-in-rancher/istio/cpu-and-memory-allocations.adoc
:xref-istio-sidecar: xref:how-to-guides/advanced-user-guides/istio-setup-guide/use-istio-sidecar.adoc
:xref-istio-generate-and-view-traffic: xref:how-to-guides/advanced-user-guides/istio-setup-guide/generate-and-view-traffic.adoc
:xref-enable-istio-in-namespace: xref:how-to-guides/advanced-user-guides/istio-setup-guide/enable-istio-in-namespace.adoc
:xref-enable-istio-in-cluster: xref:how-to-guides/advanced-user-guides/istio-setup-guide/enable-istio-in-cluster.adoc
endif::[]

This section describes how to enable Istio and start using it in your projects.

If you use Istio for traffic management, you will need to allow external traffic to the cluster. In that case, you will need to follow all of the steps below.

== Prerequisites

This guide assumes you have already {xref-install-upgrade}[installed Rancher,] and you have already {xref-cluster-deployment}[provisioned a separate Kubernetes cluster] on which you will install Istio.

The nodes in your cluster must meet the {xref-istio-cpu-memory-allocations}[CPU and memory requirements.]

The workloads and services that you want to be controlled by Istio must meet https://istio.io/docs/setup/additional-setup/requirements/[Istio's requirements.]

== Install

[TIP]
.Quick Setup Tip:
====

If you don't need external traffic to reach Istio, and you just want to set up Istio for monitoring and tracing traffic within the cluster, skip the steps for {xref-istio-gateway-setup}[setting up the Istio gateway] and {xref-istio-traffic-management-setup}[setting up Istio's components for traffic management.]
====


. {xref-enable-istio-in-cluster}[Enable Istio in the cluster.]
. {xref-enable-istio-in-namespace}[Enable Istio in all the namespaces where you want to use it.]
. {xref-istio-sidecar}[Add deployments and services that have the Istio sidecar injected.]
. {xref-istio-gateway-setup}[Set up the Istio gateway.]
. {xref-istio-traffic-management-setup}[Set up Istio's components for traffic management.]
. {xref-istio-generate-and-view-traffic}[Generate traffic and see Istio in action.]
